Initial structure and photos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
         reorder
       </mat-icon>
       <div class="silder-content">
-        <h1>Angular Material Landing Page</h1>
+        <h1>Simón's Landscape Service</h1>
       </div>
     </div>
     <div class="features">
@@ -63,12 +63,12 @@
           </p>
         </div>
         <div class="column">
-          <img src="https://unsplash.com/photos/DPKYNu2Vvk0/download?force=true">
+          <img src="assets/images/landscape2.jpg">
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <img src="https://unsplash.com/photos/MI9-PY5cyNs/download?force=true">
+          <img src="assets/images/landscape3.jpg">
         </div>
         <div class="column center-content">
           <h3>Angular Material Buttons
@@ -86,12 +86,12 @@
           </p>
         </div>
         <div class="column">
-          <img src="https://unsplash.com/photos/6JVlSdgMacE/download?force=true">
+          <img src="assets/images/landscape4.jpg">
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <img src="https://unsplash.com/photos/Fi-GJaLRGKc/download?force=true">
+          <img src="assets/images/landscape6.jpg">
         </div>
         <div class="column center-content">
           <h3>Angular Material Tables
