--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,7 +117,7 @@ img {
 }
 
 .silder {
-  background-image: url(https://unsplash.com/photos/SUlisDzP9W8/download?force=true&w=1920);
+  background-image: url(assets/images/landscape1.jpg);
   height: 600px;
   background-size: cover;
   background-position: center;
@@ -234,7 +234,7 @@ img {
 }
 
 .contactus {
-  background-image: url('https://unsplash.com/photos/VivsxaizzVE/download?force=true');
+  background-image: url('assets/images/landscape5.jpg');
   background-position: center;
   background-size: cover;
   height: 200px;
